<resources>
    <string name="app_name">Synctime</string>
    <string name="no_data_found">No Data Found</string>
    <string name="data_backed_up_successfully">Data Backed Up Successfully</string>
    <string name="desc_left_menu_drawer">left menu drawer</string>
    <string name="on_duty">On Duty</string>
    <string name="leaves">Leaves</string>
    <string name="holiday">Holiday</string>
    <string name="dashboard">Dashboard</string>
    <string name="attendance">Attendance</string>
    <string name="punch">Punch</string>
    <string name="home">Home</string>
    <string name="desc_menu_back">menu back</string>
    <string name="desc_clock_out">clock out</string>
    <string name="desc_clock_in">clock in</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="desc_header_clock_icon">header clock icon</string>
    <string name="desc_filter">filter button</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="attendance_status">Attendance Status:</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="coming_by">Coming By:</string>
    <string name="going_by">Going By:</string>
    <string name="duration">Duration:</string>
    <string name="device">Device:</string>
    <string name="swipe_details">Swipe Details</string>
    <string name="sync">Sync</string>
    <string name="shift">Shift</string>
    <string name="shift_roaster">Shift Roaster</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="remarks">Remarks</string>
    <string name="apply">Apply</string>
    <string name="connect_wifi">Connect Wifi</string>
    <string name="connect_device">Connect Device</string>
    <string name="register">Register</string>
    <string name="serial_number_info">Please enter serial number of device</string>
    <string name="bind_deice_info">Please set host and port to bind device</string>
    <string name="wifi_info">Please select wifi</string>
    <string name="user_manage_info">Enter username for registeration</string>
    <string name="set_host_port">HOST:PORT</string>
    <string name="bind">Bind</string>
    <string name="host">Set Host</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="override_time_zone">Override Time Zone</string>
    <string name="username">username</string>
    <string name="desc_login_bg">login bg</string>
    <string name="lbl_login_welcome">Welcome</string>
    <string name="lbl_sign_in">Sign in</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="url">URL</string>
    <string name="desc_login">login</string>
    <string name="lbl_copy_right">Synctime \u00A9 2019</string>
    <string name="server_unreachable">invalid url or unreachable, please try again</string>
    <string name="fields_mandatory">All fields are mandatory</string>
    <string name="from_date_cannot_be_greater_than_to_date">From Date Cannot Be Greater Than To Date</string>
    <string name="invalid_from_date">Invalid From Date</string>
    <string name="invalid_to_date">Invalid To Date</string>
    <string name="invalid_user_pwd">Invalid user/password</string>
    <string name="desc_logout">logout</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="data_already_sync">Data already sync</string>
    <string name="leave_duration">Leave Duration</string>
    <string name="sanction_by">Sanction By</string>
    <string name="approve_by">Approve By</string>
    <string name="leave_type">Leave Type</string>
    <string name="apply_comp_off">Apply Comp Off</string>
    <string name="credited">Credited:</string>
    <string name="applied">Applied:</string>
    <string name="availed">Availed:</string>
    <string name="lapsed">Lapsed:</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="leave_balance">Leave Balance</string>
    <string name="leave_info">Leave Info</string>
    <string name="sanctioner">Sanctioner:</string>
    <string name="authoriser">Authoriser:</string>
    <string name="sanctioned_by">Sanctioned By</string>
    <string name="authorised_by">Authorised By</string>
    <string name="status">Status:</string>
    <string name="apply_on_duty">Apply On Duty</string>
    <string name="public_holiday">Public Holiday</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="serialnumber">Serial Number</string>
    <string name="username_register">User Name</string>
    <string name="username_id">User Id</string>
    <string name="hostname">Hostname:Pot</string>
    <string name="approver">Approver</string>
    <string name="method_not_allowed">Method not allowed</string>
    <string name="address">Address</string>
    <string name="check_in">"Check In"</string>
    <string name="check_out">"Check Out"</string>
    <string name="you_have_checked_in_today">You have Checked in today</string>
    <string name="you_have_checked_out_today">You have Checked out today</string>
    <string name="times">times</string>
    <string name="register_user">Register User</string>
    <string name="bluetooth_setup">Setup Bluetooth</string>
    <string name="wifi_setup">Setup Wifi</string>
    <string name="device_bind">Bind Device</string>
    <string-array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
</resources>
