<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@android:color/white"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_clock_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:drawableTop="@drawable/ic_clock_in"
                android:text="@string/clock_in" />


            <TextView
                android:id="@+id/tv_clock_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:drawableTop="@drawable/ic_clock_out"
                android:text="@string/clock_out" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/tv_attendance_summary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="-10dp"
                android:layout_weight="50"
                android:drawableBottom="@drawable/ic_line"
                android:fontFamily="sans-serif-bold"
                android:gravity="center|bottom"
                android:text="@string/attendance"
                android:textColor="@color/dark_gray"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_leaves_summary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="-10dp"
                android:layout_weight="50"
                android:drawableBottom="@drawable/ic_line_white"
                android:fontFamily="sans-serif-bold"
                android:gravity="center|bottom"
                android:text="@string/leaves"
                android:textColor="@color/dark_gray"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/menu_summary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" />

</LinearLayout>