<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <CheckBox
            android:id="@+id/override_time_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/override_time_zone"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"/>


        <TextView
            android:id="@+id/tv_from_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/override_time_zone"
            android:text="@string/from_date"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_from_date_label"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_clock_dark_gray"
            android:text="11/11/2017"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"/>


        <TextView
            android:id="@+id/tv_from_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tv_from_date_label"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_clock_dark_gray"
            android:text="11:11"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_to_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tv_time"
            android:text="@string/to_date"/>

        <TextView
            android:id="@+id/tv_to_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_to_date_label"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_clock_dark_gray"
            android:text="11/11/2017"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"/>


        <TextView
            android:id="@+id/tv_to_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tv_to_date_label"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_clock_dark_gray"
            android:text="11:11"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_to_time"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_remarks"
            android:hint="@string/remarks"
            android:inputType="text"
            android:maxLength="150"
            android:textSize="15sp"
            android:theme="@style/et_black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/et_remarks"
            android:layout_marginTop="40dp"
            android:background="@drawable/et_round_btn"
            android:text="@string/apply"
            android:textColor="@color/dark_gray"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>